--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@twilio/voice-react-native-sdk": "^1.1.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-tailwindcss": "^1.1.11"
+    "react-native-svg": "^15.7.1",
+    "react-native-tailwindcss": "^1.1.11",
+    "twilio": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,6 +37,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
